# sketchthing

./: .browserslistrc  .eslintignore  .eslintrc  .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  index.html  lib-licenses.txt  package-lock.json  package.json  rustfmt.toml  subset.json  subset.mjs  tsconfig.json  vite.config.ts
.github/workflows/: test.yml
bundlerPlugins/: banner.js
fontSetup/: unicode.mjs
mailEncoding/: base64.js  encoding.js  index.js
pkg/: package.json  quad.d.ts  quad.js  quad_bg.wasm  quad_bg.wasm.d.ts
scripts/: copyLicenses.js
src/: App.module.scss  App.tsx  ControlPanel.tsx  coord.rs  index.scss  inputs.ts  lib.rs  main.tsx  points.txt  quadfloat.rs  quadtree.rs  quadvec.rs  react-shim.d.ts
src/components/ControlPanel/: ControlPanel.module.scss  ControlPanel.tsx
src/components/ControlPanel/ControlSelect/: ControlSelect.module.scss  ControlSelect.tsx  index.ts  visuals.ts
src/components/ControlPanel/ControlSketch/: ControlSketch.module.scss  ControlSketch.tsx
src/components/ControlPanel/ControlSlider/: ControlSlider.module.scss  index.ts  (+2 more)
src/components/Slider/: Slider.module.scss  Slider.tsx  index.ts  useSlider.ts
src/polyfills/: index.ts
src/styles/: a11y.scss  animations.scss  fluid.scss  font.scss  mq.scss  reset.scss  theme.scss  transitions.scss  typography.scss
src/util/: QuadTree.ts  detectBrowser.ts  drawFns.ts  hooks.ts  index.ts  math.ts  points.ts  transformImageToPoints.ts  types.ts
src/utilbit/: QuadTree.ts  drawFns.ts  hooks.ts  index.ts  points.ts  transformImageToPoints.ts  types.ts
(+2 files in other folders)
