[package]
name = "quad"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.75"
cfg-if = "1.0.0"
itertools = "0.8"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
# web-sys = { version = "0.3.56", features = ['console'] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[features]
default = ["wee_alloc"]
# default = ["console_error_panic_hook"]
# default = ["console_error_panic_hook", "wee_alloc"]
